--- a/disney-hotstar-clone/src/index.css
+++ b/disney-hotstar-clone/src/index.css
@@ -1,6 +1,7 @@
 body {
   color: white;
   margin: 0;
+  /* background-color: #040714; */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
